[project]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "langchain==0.3.0",
    "langchain-openai==0.2.11",
    "langgraph==0.2.56",
    "pandas<3.0.0,>=2.1.0",
    "numpy<2.0.0,>=1.24.0",
    "python-dotenv==1.0.0",
    "matplotlib<4.0.0,>=3.9.2",
    "yfinance<1.0.0,>=0.2.51",
    "akshare<2.0.0,>=1.11.22",
    "requests<3.0.0,>=2.31.0",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "openai<2.0.0,>=1.12.0",
    "langchain-core<1.0.0,>=0.3.29",
    "google-generativeai<1.0.0,>=0.3.0",
    "backoff<3.0.0,>=2.2.1",
    "google-genai<1.0.0,>=0.6.0",
]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "black<24.0.0,>=23.7.0",
    "isort<6.0.0,>=5.12.0",
    "flake8<7.0.0,>=6.1.0",
]
